--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postbuild": "cp dist/index.html dist/404.html"
   },
   "dependencies": {
+    "lucide-react": "^0.544.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
