--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "postbuild": "cp dist/index.html dist/404.html"
   },
   "dependencies": {
+    "i18next": "^25.5.2",
+    "i18next-browser-languagedetector": "^8.2.0",
     "lucide-react": "^0.544.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-i18next": "^15.7.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.13",
