--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,4 @@
 {
-"compilerOptions": {
-"target": "ES2020",
-"lib": ["ES2020", "DOM", "DOM.Iterable"],
-"module": "ESNext",
-"jsx": "react-jsx",
-"moduleResolution": "Bundler",
-"resolveJsonModule": true,
-"isolatedModules": true,
-"noEmit": true,
-"strict": true,
-"skipLibCheck": true,
-"esModuleInterop": true,
-"forceConsistentCasingInFileNames": true
-},
-"include": ["src"]
+  "extends": "astro/tsconfigs/strict",
+  "include": ["src", "astro.config.mjs"]
 }
